Updating schema
